force-app/main/default/objects/Gift_Basket_Request__c/Gift_Basket_Request__c.object-meta.xml
<CustomObject>
    <label>Gift Basket Request</label>
    <pluralLabel>Gift Basket Requests</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>GBR-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores and manages recipient information for gift basket requests submitted via the Next Best Action component on the Account page.</description>
</CustomObject>