force-app/main/default/objects/Gift_Basket_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <description>Lookup to associate this gift basket request with an Account.</description>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gift Basket Requests</relationshipLabel>
    <relationshipName>Gift_Basket_Requests</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>