force-app/main/default/objects/Gift_Basket_Request__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <description>Stores the recipient's city for gift basket delivery.</description>
    <type>Text</type>
    <length>100</length>
</CustomField>