force-app/main/default/objects/Gift_Basket_Request__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <description>Stores the recipient's country for gift basket delivery.</description>
    <type>Text</type>
    <length>100</length>
</CustomField>