force-app/main/default/objects/Gift_Basket_Request__c/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <label>Full Address</label>
    <description>Stores the complete shipping address for the gift basket recipient, populated by the screen flow upon submission.</description>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>