force-app/main/default/objects/Gift_Basket_Request__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <label>Postal Code</label>
    <description>Stores the recipient's postal code for gift basket delivery.</description>
    <type>Text</type>
    <length>20</length>
</CustomField>