force-app/main/default/objects/Gift_Basket_Request__c/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <label>Recipient Name</label>
    <description>Stores the recipient's full name for the gift basket delivery.</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>