force-app/main/default/objects/Gift_Basket_Request__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <label>State/Province</label>
    <description>Stores the recipient's state or province for gift basket delivery.</description>
    <type>Text</type>
    <length>100</length>
</CustomField>