force-app/main/default/objects/Gift_Basket_Request__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <label>Street Address</label>
    <description>Stores the recipient's street address for gift basket delivery.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>