force-app/main/default/objects/Gift_Basket_Request__c/fields/Submission_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date_Time__c</fullName>
    <label>Submission Date/Time</label>
    <description>Records the date and time when the gift basket request was submitted via the screen flow.</description>
    <type>DateTime</type>
</CustomField>