force-app/main/default/objects/Gift_Basket_Request__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <label>Submitted By</label>
    <description>Lookup to the User who submitted the gift basket request.</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Gift Basket Requests (Submitted By)</relationshipLabel>
    <relationshipName>Gift_Basket_Requests_Submitted_By</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>